# A01_pymsis

A01_pymsis/: pyproject.toml
A01_pymsis/A01/: SW-All.csv  msis00f.cp310-win_amd64.pyd  msis20f.cp310-win_amd64.pyd  msis21f.cp310-win_amd64.pyd  utils.py
A01_pymsis/A01_pymsis.egg-info/: PKG-INFO  SOURCES.txt
